Changes for Labyrinth-Plugin-Album
==================================

        - add lightbox links to the edit page template.
        - avloid browser caching of images on edit page by using a timesamp.

1.07	2014-10-21
        - fixed license fields in META.json to be lists.
        - extended META and functional test suite.
        - added Labyrinth::Test::Harness to pre-requisites.
        - suppress warnings (Pages).
        - fixed several logic errors (Photos).

1.06	2014-04-16
        - fixed distribution name in META.

1.05	2013-10-20
        - fixed XHTML tags.
        - added button classes.
        - updated titles and breadcrumbs.
        - added slideshow template and javascript.
        - add functionality to list multiple albums/photos.

1.04	2013-02-10
        - added cover photo feature.
        - added config support for image and thmbnail sizes.
        - update field validation.
        - default lowered to PUBLISHER.
        - fixed hide gallery album.
        - allow deletion of archive photos from filesystem.
        - allow photos to be moved between albums.
        - now requires Labyrinth Core 5.14.
        - added LICENSE file.
        - added INSTALL file.

1.03	2013-01-06
        - aded hits dispatch and template files.
        - change file dates changed to meet W3CDTF standards.
        - updated test suite.
        - META tests no longer require specific versions.
        - added minimum perl version (5.006).
        - reworked Makefile.PL for clarity.

1.02	2012-01-25
	    - allow config settings of maxphotowidth & maxphotoheight for photos, 
	      and  maxthumbwidth & maxthumbheight for thumbnails.
	    - set a default of 0 for parentid.

1.01	2012-01-08
	    - check we have an accessible directory to store photos
	    - added missing modules in metadata provides.

1.00	2012-01-04
	    - first official release