@@ -37,3 +37,4 @@ vhost/cgi-bin/templates/hits/hits_pages.html
 vhost/cgi-bin/templates/hits/hits_photos.html
 vhost/html/js/fadeslideshow.js.diff
 vhost/html/js/multifile.js
+vhost/toolkit/thumbnails.pl
