@@ -45,6 +45,7 @@ GetPhotosInOrder=SELECT * FROM photos WHERE pageid=? ORDER BY orderno
 HiddenPhotos=SELECT * FROM photos WHERE hide=1
 SetDimensions=UPDATE photos SET dimensions=? WHERE photoid=?
 SetThumb=UPDATE photos SET thumb=? WHERE photoid=?
+SetImage=UPDATE photos SET image=? WHERE photoid=?
 
 CheckPhotos=SELECT * FROM photos WHERE pageid=? AND photoid IN ($ids)
 CheckPhoto=SELECT ph.*,count(p1.photoid) AS count FROM photos ph \
